--- a/src/components/hero/Hero.css
+++ b/src/components/hero/Hero.css
@@ -113,6 +113,6 @@
 @media screen and (max-width: 700px) {
   .hero-trust-row {
     grid-template-columns: 1fr;
-    padding: 30px 0;
+    padding: 30px 0 0 0;
   }
 }
