--- a/src/components/reviews/Review.css
+++ b/src/components/reviews/Review.css
@@ -147,7 +147,7 @@
 @media screen and (max-width: 860px) {
   .section-text__title-centered,
   .faq__title {
-    font-size: 30px;
+    font-size: 37px;
     margin-bottom: 20px;
   }
 }
